# RoyalEngine

./: .gitignore  CMakeLists.txt
Editor/: CMakeLists.txt  EditorApp.cpp  EditorApp.h  Main.cpp  TriangleVertex.h
Editor/Panels/: CVarPanel.h  CVarPanels.cpp  DockspacePanel.cpp  DockspacePanel.h  LogPanel.cpp  LogPanel.h  MenuBar.cpp  MenuBar.h  PanelState.h  StatsPanel.cpp  StatsPanel.h
Editor/Shaders/: Triangle.hlsl
Engine/: CMakeLists.txt
Engine/Include/Engine/Core/: Application.h  Assert.h  CVar.h  Input.h  LogLevel.h  Logger.h  Profiler.h  Time.h
Engine/Include/Engine/Platform/: Window.h  WindowConfig.h
Engine/Include/Engine/RHI/DX12/: DX12CommandContext.h  DX12Device.h  DX12GpuProfiler.h  DX12SwapChain.h
Engine/Source/Core/: Application.cpp  CVar.cpp  Input.cpp  Logger.cpp  Profiler.cpp  Time.cpp
Engine/Source/Platform/: Window.cpp
Engine/Source/RHI/DX12/: DX12CommandContext.cpp  DX12Device.cpp  DX12GpuProfiler.cpp  DX12SwapChain.cpp
